# opencode-python

./: AGENT_IMPLEMENTATION_SUMMARY.md  AGENT_SYSTEM_COMPARISON.md  BUILD_AND_RUN.md  CHECK_PYTHON.md  CLI_COMMANDS_COMPARISON.md  CLI_ENHANCEMENTS.md  CLI_FIX_SUMMARY.md  COMPLETE_CONFIG_SUMMARY.md  CONFIG_IMPLEMENTATION_SUMMARY.md  CONFIG_SYSTEM_COMPARISON.md  CONVERSION_ALL_MODULES.md  CONVERSION_COMPLETE.md  CONVERSION_SUMMARY.md  FINAL_REPORT.md  IMPLEMENTATION_SUMMARY.md  INSTALL.md  LOCAL_MODELS.md  PROXY_SUPPORT.md  QUICKSTART.md  README.md  RUN_COMMAND_GUIDE.md  TOOL_SYSTEM_COMPARISON.md  TROUBLESHOOTING.md  TRUNCATION_IMPLEMENTATION_COMPLETE.md  TUI_IMPLEMENTATION_PLAN.md  fix.bat  fix.sh  opencode.json  opencode.json.example  prompt.txt  pyproject.toml  quickstart.bat  quickstart.sh  requirements-minimal.txt  setup.bat  setup.sh
examples/: basic_usage.py
opencode/: __init__.py
opencode/acp/: __init__.py  index.py
opencode/agent/: __init__.py  agent.py
opencode/agent/prompt/: __init__.py  index.py
opencode/auth/: __init__.py  index.py
opencode/bun/: __init__.py  index.py
opencode/bus/: __init__.py  bus_event.py  index.py
opencode/cli/: __init__.py  __main__.py  auth.py  main.py
opencode/cli/cmd/debug/: __init__.py  index.py
opencode/cli/cmd/tui/: __init__.py  index.py
opencode/command/: __init__.py  index.py
opencode/command/template/: __init__.py  index.py
opencode/config/: __init__.py  index.py  util.py
opencode/env/: __init__.py  index.py
opencode/file/: __init__.py  index.py
opencode/flag/: __init__.py  index.py
opencode/format/: __init__.py  index.py
opencode/global_path/: __init__.py  index.py
opencode/id/: __init__.py  id.py
opencode/ide/: __init__.py  index.py
opencode/installation/: __init__.py  index.py
opencode/lsp/: __init__.py  index.py  server.py
opencode/mcp/: __init__.py  index.py
opencode/patch/: __init__.py  index.py
opencode/permission/: __init__.py  index.py  next.py
opencode/plugin/: __init__.py  index.py
opencode/project/: __init__.py  bootstrap.py  instance.py  project.py  state.py
opencode/provider/: __init__.py  provider.py
opencode/provider/sdk/copilot/: __init__.py  index.py
opencode/pty/: __init__.py  index.py
opencode/question/: __init__.py  index.py
opencode/scheduler/: __init__.py  index.py
opencode/server/: __init__.py  server.py
opencode/server/routes/: __init__.py  index.py  question.py
opencode/session/: __init__.py  compaction.py  index.py
opencode/share/: __init__.py  index.py
opencode/shell/: __init__.py  index.py
opencode/skill/: __init__.py  index.py
opencode/snapshot/: __init__.py  index.py
opencode/storage/: __init__.py  storage.py
opencode/tool/: __init__.py  apply_patch.py  bash.py  batch.py  codesearch.py  edit.py  glob.py  grep.py  ls.py  lsp.py  multiedit.py  plan.py  question.py  read.py  skill.py  task.py  todo.py  tool.py  truncation.py  webfetch.py  websearch.py  write.py
opencode/util/: __init__.py  abort.py  defer.py  filesystem.py  http.py  lock.py  log.py  queue.py  signal.py  timeout.py
opencode/worktree/: __init__.py  index.py
tests/: test_opencode.py
