[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencode"
version = "0.1.0"
description = "AI-powered development tool - Python port"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "OpenCode Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "aiofiles>=23.2.0",
    "watchdog>=3.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "toml>=0.10.2",
    "orjson>=3.9.0",
    "litellm>=1.0.0",
    "openai>=1.12.0",
    "anthropic>=0.18.0",
    "gitpython>=3.1.42",
    "pathspec>=0.12.0",
    "diff-match-patch>=20230430",
    "tree-sitter>=0.20.0",
    "tree-sitter-bash>=0.19.0",
    "jinja2>=3.1.3",
    "prompt-toolkit>=3.0.43",
    "structlog>=24.1.0",
    "tenacity>=8.2.3",
    "psutil>=5.9.8",
    "platformdirs>=4.2.0",
    "keyring>=24.3.0",
    "cryptography>=42.0.0",
    "pydantic-core>=2.14.0",
    "typing-extensions>=4.9.0",
    "anyio>=4.2.0",
    "sniffio>=1.3.0",
    "certifi>=2024.2.2",
    "charset-normalizer>=3.3.2",
    "idna>=3.6",
    "urllib3>=2.2.0",
    "python-jsonrpc-server>=0.4.0",
    "lsprotocol>=2023.0.1",
    "pygls>=1.3.0",
    "markdown>=3.5.2",
    "strip-ansi>=0.1.1",
    "clipboard>=0.0.4",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.25.0",
    "jsonschema>=4.21.0",
    "referencing>=0.33.0",
    "attrs>=23.2.0",
    "cattrs>=23.2.3",
    "requests>=2.31.0",
    "oauthlib>=3.2.2",
    "requests-oauthlib>=1.3.1",
    "pygithub>=2.2.0",
    "zipfile36>=0.1.3",
    "regex>=2023.12.25",
    "pydash>=7.0.7",
    "toolz>=0.12.1",
    "cytoolz>=0.12.2",
    "tzdata>=2024.1",
    "ulid-py>=1.1.0",
    "shortuuid>=1.0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "black>=24.1.0",
    "pre-commit>=3.6.0",
    "types-aiofiles>=23.2.0",
    "types-pyyaml>=6.0.12",
    "types-toml>=0.10.8",
    "types-requests>=2.31.0",
    "types-regex>=2023.12.25",
]

[project.scripts]
opencode = "opencode.cli.main:cli_run"

[project.urls]
Homepage = "https://github.com/anomalyco/opencode"
Repository = "https://github.com/anomalyco/opencode"
Documentation = "https://docs.opencode.ai"

[tool.hatch.build.targets.wheel]
packages = ["opencode"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["opencode"]
omit = ["*/tests/*", "*/test_*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
